load("@tx-kit-ext//rules/build:multi_app.bzl", "multi_app")
load("@tx-pkg-aux//uni/tools/build_info:generate_build_info.bzl", "var_providing_rule")

var_providing_rule(
    name = "my_vars",
    var_value = "HelloFromHelloPkg",
)

multi_app(
    name = "hello-aux",
    srcs = glob(["*.cpp"]),
    local_defines = [
        "FOO=$(FOO)",
        "WORKSPACE_NAME=$(WORKSPACE_NAME)",
        "LABEL_NAME=$(LABEL_NAME)",
        "LABEL_PACKAGE_NAME=$(LABEL_PACKAGE_NAME)",
        "LABEL_WORKSPACE_NAME=$(LABEL_WORKSPACE_NAME)",
        "LABEL_REPO_NAME=$(LABEL_REPO_NAME)",
        "LABEL_WORKSPACE_ROOT=$(LABEL_WORKSPACE_ROOT)",
    ],
    toolchains = [
        ":my_vars",
        "@tx-pkg-aux//src/pkg-build:build_vars",
    ],
    deps = [
        "@tx-pkg-aux//src/pkg-boot",
        "@tx-pkg-aux//src/pkg-fs",
    ],
)
