load("@tx-kit-ext//rules/build:multi_app.bzl", "multi_app")

multi_app(
    name = "hello-im",
    srcs = glob(["**/*.cpp"]),
    data = [".env"],
    deps = [
        "//src/pkg-imgui",
    ],
    linkopts = select({
        "//conditions:default": [],
        "@platforms//cpu:wasm32": [
            "-sALLOW_MEMORY_GROWTH",  # SDL_WINDOW_FILL_DOCUMENT requires 25161728 bytes initially (default 16777216), -sINITIAL_MEMORY=X can be used instead
        ],
    }),
)
