load("@tx-kit-ext//rules/build:tx_binary.bzl", "tx_binary")

tx_binary(
    name = "try-http-nghttp2",
    srcs = glob(["*.cpp"]),
    deps = [
        "@tx-pkg-aux//:pkg-boot",
        "@nghttp2//:nghttp2",
        "@openssl//:crypto",
        "@openssl//:ssl",
    ],
    target_compatible_with = select({
        # WASM don't need custom http client implementation
        "@platforms//cpu:wasm32": ["@platforms//:incompatible"],
        # Windows ARM64 doesn't have perl rules to build openssl (don't try as boringssl will be used finally)
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
