load("@tx-kit-ext//rules/build:tx_binary.bzl", "tx_binary")

tx_binary(
    name = "try-http-nghttp2",
    srcs = glob(["**/*.cpp", "**/*.h"]),
    deps = [
        "@tx-pkg-aux//src/pkg-boot",
        "@nghttp2//:nghttp2",
        #OPENSSL "@openssl//:crypto",
        #OPENSSL "@openssl//:ssl",
        "@boringssl//:ssl",
    ],
    linkopts = select({
        "@platforms//os:windows": ["ws2_32.lib"],
        "//conditions:default": [],
    }),
    target_compatible_with = select({
        "//conditions:default": [],
        # WASM don't need custom http client implementation
        "@platforms//cpu:wasm32": ["@platforms//:incompatible"],
        #OPENSSL # Windows ARM64 doesn't have perl rules to build openssl (don't try as boringssl will be used finally)
        #OPENSSL "@platforms//os:windows": ["@platforms//:incompatible"],
    }),
)
