load("@tx-kit-ext//rules/build:tx_binary.bzl", "tx_binary")

tx_binary(
    name = "try-imgui-1",
    srcs = glob(["*.cpp", "*.h"]),
    data = [
        ".env",
        "//data:copy_fonts",
    ],
    deps = [
        "@tx-pkg-aux//:pkg-boot",
        "@imgui//:imgui",
        "@imgui//backends:platform-sdl3",
        "@imgui//backends:renderer-sdlrenderer3",  #TODO: try SDL_GPU renderer as more modern and advanced
    ],
    linkopts = select({
        "//conditions:default": [],
        "@platforms//cpu:wasm32": [
            "--preload-file", "$(location //data:copy_fonts)@/data/fonts",
        ],
    }),
)
