load("@tx-kit-ext//rules:embedded.bzl", "embedded_files")
load("@tx-kit-ext//rules:multi_lib.bzl", "multi_lib")

embedded_files(
    name = "embedded_fonts",
    files_to_dir = {
        "//data:fonts_group": "data/fonts",
    },
)

multi_lib(
    name = "imgui",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    embedded_data = [":embedded_fonts"],
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sdl",
        "@imgui",
        "@imgui//backends:platform-sdl3",
        "@imgui//backends:renderer-sdlrenderer3",  #TODO: try SDL_GPU renderer as more modern and advanced
        "@tx-pkg-aux//pkg/fs",
    ],
)
