load("@tx-kit-ext//rules/build:multi_lib.bzl", "multi_lib")
load(
    ":embedded.bzl",
    "embedded_files",
    "droid_embedded_assets",
    "wasm_embedded_linkopts_params",
)

embedded_files(
    name = "embedded_fonts",
    files_to_dir = {
        "//data:fonts_group": "data/fonts",
    },
    visibility = ["//visibility:public"],
)

droid_embedded_assets(
    name = "droid_embedded_assets",
    embedded = ":embedded_fonts",
    visibility = ["//visibility:public"],
)

wasm_embedded_linkopts_params(
    name = "wasm_embedded_linkopts_params",
    assets = ":embedded_fonts",
    visibility = ["//visibility:public"],
)

multi_lib(
    name = "pkg-imgui",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = ".",
    deps = [
        "//src/pkg-sdl",
        "@tx-pkg-aux//src/pkg-fs",
        "@imgui//:imgui",
        "@imgui//backends:platform-sdl3",
        "@imgui//backends:renderer-sdlrenderer3",  #TODO: try SDL_GPU renderer as more modern and advanced
    ],

    droid_library = True,
    droid_custom_package = "org.tx.imgui",
    droid_srcs = ["Dummy.java"],

    # embedded for android (via assets)
    droid_assets = [":droid_embedded_assets"],
    droid_assets_dir = "assets",

    # embedded for host TODO: make their copy in target app instead of runfiles
    data = [
        "//data:fonts_group",
    ],

    # embedded for wasm (via preload-file) TODO: integrate using wasm_preload_params linkopts
    additional_linker_inputs = select({
        "@platforms//cpu:wasm32": [":wasm_embedded_linkopts_params"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@platforms//cpu:wasm32": ["@$(execpaths :wasm_embedded_linkopts_params)"],
        "//conditions:default": [],
    }),

    visibility = ["//visibility:public"],
)
