load("@tx-kit-ext//rules:multi_lib.bzl", "multi_lib")
load("@tx-kit-ext//rules:embedded.bzl", "embedded_files")

embedded_files(
    name = "embedded_fonts",
    files_to_dir = {
        "//data:fonts_group": "data/fonts",
    },
)

multi_lib(
    name = "pkg-imgui",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = ".",
    deps = [
        "//src/pkg-sdl",
        "@tx-pkg-aux//src/pkg-fs",

        "@imgui//:imgui",
        "@imgui//backends:platform-sdl3",
        "@imgui//backends:renderer-sdlrenderer3",  #TODO: try SDL_GPU renderer as more modern and advanced
    ],
    embedded_data = [":embedded_fonts"],

    droid_library = True,
    droid_custom_package = "org.tx.imgui",
    droid_srcs = ["Dummy.java"],

    visibility = ["//visibility:public"],
)
