load("@tx-kit-ext//rules/build:multi_lib.bzl", "multi_lib")

multi_lib(
    name = "pkg-sdl",
    srcs = glob(["Sdl/**/*.cpp"]),
    hdrs = glob(["Sdl/**/*.h"]),
    strip_include_prefix = ".",
    deps = [
        "@tx-pkg-aux//src/pkg-app",
        "@sdl3",
    ],
    visibility = ["//visibility:public"],
)
