load("@tx-kit-ext//rules/build:multi_lib.bzl", "multi_lib")

multi_lib(
    name = "pkg-sdl",
    srcs = glob(["Sdl/**/*.cpp"]),
    hdrs = glob(["Sdl/**/*.h"]),
    strip_include_prefix = ".",
    deps = [
        "@tx-pkg-aux//src/pkg-app",
        # "@sdl3//:sdl3",
        "//demo/try/sdl3-lib",
    ],

    droid_library = True, # sdl3-lib is android_library, so this must be True
    # droid_exports = ["//demo/try/sdl3-lib"],
    droid_manifest = "//demo/try/sdl3-lib:AndroidManifest.xml",

    visibility = ["//visibility:public"],
)
