load("@tx-kit-ext//rules/build:multi_lib.bzl", "multi_lib")

multi_lib(
    name = "pkg-sdl",

    srcs = glob(["Sdl/**/*.cpp", "*.cc"]),
    hdrs = glob(["Sdl/**/*.h"]),
    strip_include_prefix = ".",

    # SDL3 wrapper library with Android glue code, allowing to declare simple main() function for C++ app (or SDL3 events based entry)
    droid_library = True,
    droid_srcs = glob(["*.java"]),
    droid_manifest = "AndroidManifest.xml",
    # By default the package is inferred from the directory where the BUILD file containing the rule is.
    #   In case of src/ parent folder it becomes invalid "pkg-sdl" ("sub.pkg-sdl" is invalid too).
    #   So we need to specify it explicitly otherwise PackageAndroidResources command will fail on processing AndroidManifest.xml with such value.
    droid_custom_package = "org.tx.sdl",
    droid_resource_files = glob(["java/res/**"]),

    deps = [
        "@tx-pkg-aux//src/pkg-app",
        "@sdl3",
    ],

    linkopts = select({
        "@platforms//os:android": [
            "-Wl,--undefined=SDL_main",
        ],
        "//conditions:default": [],
    }),

    visibility = ["//visibility:public"],
)
