load("@tx-kit-ext//rules:multi_app.bzl", "multi_app")

multi_app(
    name = "peerlab",
    srcs = glob([
        "**/*.cpp",
        "**/*.h",
    ]),
    cxxopts = ["-fexceptions"],
    data = [
        ".env",
    ],
    deps = [
        "//pkg/imgui",
        "@tx-pkg-aux//pkg/exec",
        "@tx-pkg-aux//pkg/rtt/rtc",
        "@tx-pkg-aux//pkg/syntm",
    ],
)
