load("@tx-kit-ext//rules/build:multi_app.bzl", "multi_app")

multi_app(
    name = "imgui-1",
    srcs = glob(["*.cpp", "*.h"]),
    deps = [
        "@tx-pkg-aux//src/pkg-boot",
        "@imgui//:imgui",
        "@imgui//backends:platform-sdl3",
        "@imgui//backends:renderer-sdlrenderer3",  #TODO: try SDL_GPU renderer as more modern and advanced
    ],
    data = [
        ".env",
        "//data:fonts_dir",
    ],
    additional_linker_inputs = select({
        "@platforms//cpu:wasm32": ["//data:fonts_dir"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@platforms//cpu:wasm32": ["--preload-file", "$(execpath //data:fonts_dir)@/data/fonts"],
        "//conditions:default": [],
    }),
)
