load("@tx-kit-ext//rules/build:multi_app.bzl", "multi_app")
load("@bazel_skylib//rules:copy_directory.bzl", "copy_directory")

copy_directory(
    name = "assets_copy_data",
    src = "//data:fonts_dir",
    out = "assets/data/fonts",
)

multi_app(
    name = "imgui-1",
    srcs = glob(["*.cpp", "*.h"]),
    deps = [
        "@tx-pkg-aux//src/pkg-boot",
        "@imgui//:imgui",
        "@imgui//backends:platform-sdl3",
        "@imgui//backends:renderer-sdlrenderer3",  #TODO: try SDL_GPU renderer as more modern and advanced
        "//demo/try/sdl3-lib",
    ],
    droid_assets = [":assets_copy_data"],
    droid_assets_dir = "assets",

    data = [
        ".env",
        "//data:fonts_dir",
    ],
    additional_linker_inputs = select({
        "@platforms//cpu:wasm32": ["//data:fonts_dir"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@platforms//cpu:wasm32": ["--preload-file", "$(execpath //data:fonts_dir)@/data/fonts"],
        "//conditions:default": [],
    }),
)
