load("@tx-kit-ext//rules/build:multi_app.bzl", "multi_app")
load("@rules_android//rules:rules.bzl", "android_library")

android_library(
    name = "sdl3-1_android",
    srcs = [
        "TryActivity.java",
    ],
    deps = [
        "//demo/try/sdl3-1/lib:sdl3_android",
    ],
)

multi_app(
    name = "sdl3-1",
    srcs = glob(["*.cpp"]),
    data = [".env"],
    deps = [
        "@tx-pkg-aux//src/pkg-boot",
        ":sdl3-1_android",
    ],
    droid_manifest = "AndroidManifest.xml",
    linkopts = select({
        #"@platforms//os:android": ["-Wl,--undefined=SDL_main"],
        "//conditions:default": [],
    }),
)
