load("@tx-kit-ext//rules/build:multi_app.bzl", "multi_app")

multi_app(
    name = "sdl3-1",
    srcs = glob(["*.cpp"]),
    droid_srcs = ["TryActivity.java"],
    data = [".env"],
    deps = [
        "@tx-pkg-aux//src/pkg-boot",
        "@sdl3",
    ],
    droid_manifest = "AndroidManifest.xml",
    linkopts = select({
        #"@platforms//os:android": ["-Wl,--undefined=SDL_main"],
        "//conditions:default": [],
    }),
)
