load("@tx-kit-ext//rules/build:multi_app.bzl", "multi_app")
load("@bazel_skylib//rules:copy_directory.bzl", "copy_directory")

copy_directory(
    name = "copy_data",
    src = "data",
    out = "data",
)

multi_app(
    name = "sdl3-2",
    srcs = glob(["*.cpp"]),
    deps = [
        "@tx-pkg-aux//src/pkg-boot",
        "//demo/try/sdl3-lib",
    ],
    droid_manifest = "//demo/try/sdl3-lib:AndroidManifest.xml",

    data = [
        ".env",
        ":copy_data",
    ],
    additional_linker_inputs = select({
        "@platforms//cpu:wasm32": [":copy_data"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@platforms//cpu:wasm32": ["--preload-file", "$(execpath :copy_data)@/data"],
        "//conditions:default": [],
    }),
    # platforms = ["host", "wasm"],
)
