load("@tx-kit-ext//rules:multi_lib.bzl", "multi_lib")

# SDL3 wrapper library with Android glue code, allowing to declare simple main() function in C++ app
multi_lib(
    name = "sdl3-lib",
    srcs = glob(["*.cc"]),
    droid_library = True,
    droid_manifest = "AndroidManifest.xml",
    droid_srcs = glob(["*.java"]),
    linkopts = select({
        "@platforms//os:android": [
            "-Wl,--undefined=SDL_main",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "@sdl3",
    ],
)
